deploy/mesh/ns-mesh.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-node-ws
  labels:
    mesh: mesh-node-ws
    gateway: ingress-gw
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
