deploy/mesh/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesh-node-ws
  namespace: mesh-node-ws
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mesh-node-ws
  template:
    metadata:
      labels:
        app: mesh-node-ws
    spec:
      containers:
        - name: node-ws
          image: rammaddali/node-ws:latest
          ports:
            - containerPort: 80
