deploy/mesh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: color-green
  namespace: apps
  labels:
    app: node-ws
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: color
    version: green
